# bank-queue

./: .gitignore  Makefile.am  README.md  check.py  check.sh  configure  configure.ac  logtree.c  main.c  makefile
.github/workflows/: c-cpp.yml
entradas/: entrada-0001.txt  entrada-0002.txt  entrada-0003.txt  entrada-0004.txt  entrada-0005.txt  entrada-0006.txt  entrada-0007.txt  entrada-0008.txt  entrada-0009.txt  entrada-0010.txt  entrada-0011.txt  entrada-0012.txt  entrada-0013.txt  entrada-0014.txt  entrada-0015.txt  entrada-0016.txt  entrada-0017.txt  entrada-0018.txt  entrada-0019.txt  entrada-0020.txt  entrada-0021.txt  entrada-0022.txt  entrada-0023.txt  entrada-0024.txt  entrada-0025.txt  entrada-0026.txt  entrada-0027.txt  entrada-0028.txt  entrada-0029.txt  entrada-0030.txt  entrada-0031.txt  entrada-0032.txt  entrada-0033.txt  entrada-0034.txt  entrada-0035.txt  entrada-0036.txt  entrada-0037.txt  entrada-0038.txt  entrada-0039.txt  entrada-0040.txt  (+60 more)
saidas-esperadas/: saida-0001.txt  saida-0002.txt  saida-0003.txt  saida-0004.txt  saida-0005.txt  saida-0006.txt  saida-0007.txt  saida-0008.txt  saida-0009.txt  saida-0010.txt  saida-0011.txt  saida-0012.txt  saida-0013.txt  saida-0014.txt  saida-0015.txt  saida-0016.txt  saida-0017.txt  saida-0018.txt  saida-0019.txt  saida-0020.txt  saida-0021.txt  saida-0022.txt  saida-0023.txt  saida-0024.txt  saida-0025.txt  saida-0026.txt  saida-0027.txt  saida-0028.txt  saida-0029.txt  saida-0030.txt  saida-0031.txt  saida-0032.txt  saida-0033.txt  saida-0034.txt  saida-0035.txt  saida-0036.txt  saida-0037.txt  saida-0038.txt  saida-0039.txt  saida-0040.txt  (+60 more)
src/: Makefile.am  cliente.h  escalonador.c  escalonador.h  fila_fifo.c  fila_fifo.h  io.c  io.h  logtree.c  logtree.h  main.c  output.c  output.h
tests/: Makefile.am  check_escalonador  check_escalonador.c  check_fila_fifo.c  check_io.c  check_logtree.c  input_example.txt
